--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "gulp-concat": "^2.2.0",
     "less": "~1.7.3",
     "gulp-sass": "^0.7.3",
-    "node-sass": "^0.9.3"
+    "node-sass": "^0.9.3",
+    "gulp-hamlc": "git+ssh://git@github.com:smithclay/gulp-hamlc.git",
+    "haml-coffee": "^1.14.1",
+    "gulp-haml-coffee": "git+ssh://git@github.com:saschagehlich/gulp-haml-coffee.git"
   },
   "engines": {
     "node": ">=0.10.0"
