--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "undo": "https://github.com/jzaefferer/undo/archive/master.zip",
     "jquery-autosize": "~1.18.9",
     "compass-mixins": "~1.0.1",
-    "bootstrap-sass-official": "~3.2.0+1"
+    "bootstrap-sass-official": "~3.2.0"
   },
   "devDependencies": {
   }
