--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "jquery-autosize": "~1.18.9",
     "compass-mixins": "~1.0.1",
     "bootstrap-sass-official": "~3.2.0",
-    "font-awesome": "~4.1.0"
+    "font-awesome": "~4.1.0",
+    "jquery.role": "git://github.com/kossnocorp/role#~1.3.1"
   },
   "devDependencies": {}
 }
