--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "node-sass": "^0.9.3",
     "gulp-hamlc": "git+ssh://git@github.com:smithclay/gulp-hamlc.git",
     "haml-coffee": "^1.14.1",
-    "gulp-haml-coffee": "git+ssh://git@github.com:saschagehlich/gulp-haml-coffee.git"
+    "gulp-haml-coffee": "git+ssh://git@github.com:saschagehlich/gulp-haml-coffee.git",
+    "gulp-flatten": "0.0.2"
   },
   "engines": {
     "node": ">=0.10.0"
