--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "compass-mixins": "~1.0.1",
     "bootstrap-sass-official": "~3.2.0",
+    "react_ujs": "https://raw.githubusercontent.com/reactjs/react-rails/master/lib/assets/javascripts/react_ujs.js",
+    "eventEmitter": "~4.2.7",
     "font-awesome": "~4.1.0"
   },
   "devDependencies": {
