--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "envify": "^1.2.1",
     "gulp-sourcemaps": "~1.1.0",
     "imagesloaded": "^3.1.8",
-    "react": "^0.11.0",
+    "react": "^0.11.1",
     "react-mixin-manager": "~0.5.2",
     "react-tools": "^0.11.0",
     "superagent": "~0.18.2",
-    "undo.js": "^0.1.0"
+    "undo.js": "^0.1.0",
+    "typeahead.js": "~0.10.5"
   },
   "devDependencies": {
     "gulp": "~3.7.0",
