--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react-mixin-manager": "~0.5.2",
     "react-tools": "^0.11.0",
     "superagent": "~0.18.2",
-    "undo.js": "^0.1.0",
-    "typeahead.js": "~0.10.5"
+    "undo.js": "^0.1.0"
   },
   "devDependencies": {
     "gulp": "~3.7.0",
