[#78090232] Компонент для множественной загрузки картинок

--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,9 @@
     "react_ujs": "https://raw.githubusercontent.com/reactjs/react-rails/master/lib/assets/javascripts/react_ujs.js",
     "eventEmitter": "~4.2.7",
     "font-awesome": "~4.1.0",
-    "typeahead.js": "~0.10.5"
+    "typeahead.js": "~0.10.5",
+    "blueimp-file-upload": "~9.7.1",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "jquery": "latest",
