--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "gulp-jade": "~0.4.2",
     "gulp-useref": "^0.4.4",
     "gulp-coffee": "~1.4.1",
-    "gulp-bundle": "git+ssh://git@github.com:bleech/gulp-bundle.git",
+    "gulp-bundle": "bleech/gulp-bundle",
     "gulp-browserify": "~0.4.6",
     "reactify": "~0.10.0",
     "through2": "latest",
@@ -48,9 +48,9 @@
     "less": "~1.7.3",
     "gulp-sass": "^0.7.3",
     "node-sass": "^0.9.3",
-    "gulp-hamlc": "git+ssh://git@github.com:smithclay/gulp-hamlc.git",
+    "gulp-hamlc": "smithclay/gulp-hamlc",
     "haml-coffee": "^1.14.1",
-    "gulp-haml-coffee": "git+ssh://git@github.com:saschagehlich/gulp-haml-coffee.git",
+    "gulp-haml-coffee": "saschagehlich/gulp-haml-coffee",
     "gulp-flatten": "0.0.2",
     "gulp-file-include": "^0.4.2"
   },
