--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "gulp-haml-coffee": "saschagehlich/gulp-haml-coffee",
     "gulp-flatten": "0.0.2",
     "gulp-file-include": "^0.4.2",
-    "serve-static": "^1.6.4"
+    "serve-static": "^1.6.4",
+    "lodash": "lodash/lodash"
   },
   "engines": {
     "node": ">=0.10.0"
