refactor OperatorCategories to use jquery-ui.sortable for d&d
[#80029328]

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "typeahead.js": "~0.10.5",
     "blueimp-file-upload": "~9.7.1",
     "lodash": "~2.4.1",
-    "jquery-autosize": "~1.18.13"
+    "jquery-autosize": "~1.18.13",
+    "jquery-ui": "~1.11.1"
   },
   "devDependencies": {
     "jquery": "latest",
