--- a/bower.json
+++ b/bower.json
@@ -1,20 +1,21 @@
 {
-  "name": "kiosk-static",
-  "version": "0.0.1",
+  "name": "KioskOperatorStatic",
+  "version": "1.0.0",
   "dependencies": {
-    "compass-mixins": "~1.0.1",
+    "react": "0.11.0",
+    "react-mixin-manager": "~0.7.0",
+    "jquery": "~2.1.1",
+    "jquery-ui": "~1.11.1",
+    "eventEmitter": "~4.2.9",
     "bootstrap-sass-official": "~3.2.0",
-    "react_ujs": "https://raw.githubusercontent.com/reactjs/react-rails/master/lib/assets/javascripts/react_ujs.js",
-    "eventEmitter": "~4.2.7",
-    "font-awesome": "~4.1.0",
-    "typeahead.js": "~0.10.5",
-    "blueimp-file-upload": "~9.7.1",
+    "blueimp-file-upload": "~9.8.0",
     "lodash": "~2.4.1",
     "jquery-autosize": "~1.18.13",
-    "jquery-ui": "~1.11.1"
+    "compass-mixins": "~1.0.1",
+    "font-awesome": "~4.1.0",
+    "typeahead.js": "~0.10.5"
   },
   "devDependencies": {
-    "jquery": "latest",
     "modernizr": "~2.8.2",
     "momentjs": "~2.7.0",
     "jquery.role": "git://github.com/kossnocorp/role#~1.3.1"
