--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-tools": "^0.11.0",
     "reactify": "0.14.0",
     "require-dir": "^0.1.0",
+    "run-sequence": "^1.0.1",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.0.0"
   },
