--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "gulp-minify-css": "^0.3.11",
     "gulp-notify": "^2.0.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.2.2",
+    "gulp-sass": "1.1.0",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "pretty-hrtime": "^0.2.2",
