--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - npm install
   - ./node_modules/bower/bin/bower -v
   - ./node_modules/bower/bin/bower install
-script: ./node_modules/gulp/bin/gulp.js build
+script: ./node_modules/gulp/bin/gulp.js dist
