--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ install:
   - npm install
   - ./node_modules/bower/bin/bower -v
   - ./node_modules/bower/bin/bower install
-script: ./node_modules/gulp/bin/gulp.js dist
+script: ./test
+  ./node_modules/gulp/bin/gulp.js dist
